--- a/LaravelSite/.env
+++ b/LaravelSite/.env
@@ -16,8 +16,8 @@ DB_PASSWORD=ThePasswordPeopleSeeOnGithub
 MONGO_DB_HOST=127.0.0.1
 MONGO_DB_PORT=27017
 MONGO_DB_DATABASE=MongoLaravel
-MONGO_DB_USERNAME=GithubNinja
-MONGO_DB_PASSWORD=ThePasswordPeopleSeeOnGithub
+MONGO_DB_USERNAME=
+MONGO_DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
